[gd_scene format=3 uid="uid://b6bf0s4w41lh6"]

[ext_resource type="Script" uid="uid://cadxd8xwm17k6" path="res://UI/Scripts/main_menu.gd" id="1_2sit6"]

[sub_resource type="Theme" id="Theme_fnvfa"]
default_font_size = 32

[node name="MainMenu" type="Control" unique_id=1308199568]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fnvfa")
script = ExtResource("1_2sit6")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1773169860]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 400

[node name="Control2" type="Control" parent="HBoxContainer" unique_id=1853414293]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" unique_id=678264302]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer" unique_id=789349235]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer" unique_id=1749221157]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "GAME
NAME"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Scene2d" type="Button" parent="HBoxContainer/VBoxContainer" unique_id=1792635142]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "Scene 2d"

[node name="Scene3d" type="Button" parent="HBoxContainer/VBoxContainer" unique_id=2110389160]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "Scene 3d"

[node name="Quit" type="Button" parent="HBoxContainer/VBoxContainer" unique_id=291724156]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "quit"

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer" unique_id=414137482]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="HBoxContainer" unique_id=619937967]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Scene2d" to="." method="_on_scene_2d_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Scene3d" to="." method="_on_scene_3d_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
